// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/post-update/rules processHostRules() returns mixed rules content 1`] = `
Object {
  "additionalNpmrcContent": Array [
    "//registry.npmjs.org:_authToken=token123",
    "//registry.other.org:_auth=basictoken123",
    "//registry.company.com/:username=user123",
    "//registry.company.com/:_password=cGFzczEyMw==",
  ],
  "additionalYarnRcYml": Object {
    "npmRegistries": Object {
      "//registry.company.com/": Object {
        "npmAuthIdent": "user123:pass123",
      },
      "//registry.npmjs.org": Object {
        "npmAuthToken": "token123",
      },
      "//registry.other.org": Object {
        "npmAuthIdent": "basictoken123",
      },
    },
  },
}
`;

exports[`manager/npm/post-update/rules processHostRules() returns rules content 1`] = `
Object {
  "additionalNpmrcContent": Array [
    "//registry.company.com/:username=user123",
    "//registry.company.com/:_password=cGFzczEyMw==",
  ],
  "additionalYarnRcYml": Object {
    "npmRegistries": Object {
      "//registry.company.com/": Object {
        "npmAuthIdent": "user123:pass123",
      },
    },
  },
}
`;
